complete the 'theoretical' part of the article

--- a/articles/er-metrics-library/er-general.bib
+++ b/articles/er-metrics-library/er-general.bib
@@ -99,3 +99,23 @@
   year={1960},
   publisher={van Nostrand}
 }
+
+@article{warrens2022understanding,
+  title={Understanding the adjusted rand index and other partition comparison indices based on counting object pairs},
+  author={Warrens, Matthijs J and van der Hoef, Hanneke},
+  journal={Journal of Classification},
+  volume={39},
+  number={3},
+  pages={487--509},
+  year={2022},
+  publisher={Springer}
+}
+
+@inproceedings{huang2006efficient,
+  title={Efficient name disambiguation for large-scale databases},
+  author={Huang, Jian and Ertekin, Seyda and Giles, C Lee},
+  booktitle={European conference on principles of data mining and knowledge discovery},
+  pages={536--544},
+  year={2006},
+  organization={Springer}
+}
