--- a/articles/er-metrics-library/er-related-work.bib
+++ b/articles/er-metrics-library/er-related-work.bib
@@ -21,6 +21,33 @@
   eprint = {https://www.science.org/doi/pdf/10.1126/science.130.3381.954}
 }
 
+@article{winkler2014,
+author = {Winkler, William E.},
+title = {Matching and record linkage},
+journal = {WIREs Computational Statistics},
+volume = {6},
+number = {5},
+pages = {313-325},
+keywords = {entity resolution, classification rules, string comparison, false match and nonmatch rates, unsupervised learning},
+doi = {https://doi.org/10.1002/wics.1317},
+url = {https://wires.onlinelibrary.wiley.com/doi/abs/10.1002/wics.1317},
+eprint = {https://wires.onlinelibrary.wiley.com/doi/pdf/10.1002/wics.1317},
+abstract = {This overview gives background on a number of statistical methods that have been proven effective for record linkage. To prepare data for the main computational algorithms, we need parsing/standardization that allows us to structure the free-form names, addresses, and other fields into corresponding components. The main parameter-estimation methods are unsupervised methods that yield ‘optimal’ record linkage parameters. Extended methods provide estimates of false match rates in both unsupervised and, with greater accuracy, in semi-supervised situations. Finally, the paper describes ongoing research for adjusting standard statistical analyses for linkage error. WIREs Comput Stat 2014, 6:313–325. doi: 10.1002/wics.1317 This article is categorized under: Statistical and Graphical Methods of Data Analysis > EM Algorithm Algorithms and Computational Methods > Seminumerical and Nonnumerical Methods Data: Types and Structure > Data Preparation and Processing Statistical and Graphical Methods of Data Analysis > Markov Chain Monte Carlo (MCMC)},
+year = {2014}
+}
+
+
+@article{jaro1989advances,
+  title={Advances in record-linkage methodology as applied to matching the 1985 census of Tampa, Florida},
+  author={Jaro, Matthew A},
+  journal={Journal of the American Statistical Association},
+  volume={84},
+  number={406},
+  pages={414--420},
+  year={1989},
+  publisher={Taylor \& Francis}
+}
+
 
 
 @article{fs1969,
@@ -104,6 +131,15 @@ publisher={The Australian National University}
   note = {accessed 2023-09-22}
 }
 
+@misc{ereval,
+  author = {paulboosz},
+  title = {entity-resolution-evaluation},
+  year = 2018,
+  howpublished = {\url{https://github.com/entrepreneur-interet-general/entity-resolution-evaluation/README.md}},
+  note = {accessed 2023-09-22}
+
+}
+
 @misc{papwithcode2019,
   author = {Meta AI},
   title = {Papers With Code},
@@ -176,4 +212,58 @@ publisher={The Australian National University}
   pages={193--218},
   year={1985},
   publisher={Springer}
+}
+
+@article{nmeth2020scipy,
+  author  = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E. and
+            Haberland, Matt and Reddy, Tyler and Cournapeau, David and
+            Burovski, Evgeni and Peterson, Pearu and Weckesser, Warren and
+            Bright, Jonathan and {van der Walt}, St{\'e}fan J. and
+            Brett, Matthew and Wilson, Joshua and Millman, K. Jarrod and
+            Mayorov, Nikolay and Nelson, Andrew R. J. and Jones, Eric and
+            Kern, Robert and Larson, Eric and Carey, C J and
+            Polat, {\.I}lhan and Feng, Yu and Moore, Eric W. and
+            {VanderPlas}, Jake and Laxalde, Denis and Perktold, Josef and
+            Cimrman, Robert and Henriksen, Ian and Quintero, E. A. and
+            Harris, Charles R. and Archibald, Anne M. and
+            Ribeiro, Ant{\^o}nio H. and Pedregosa, Fabian and
+            {van Mulbregt}, Paul and {SciPy 1.0 Contributors}},
+  title   = {{{SciPy} 1.0: Fundamental Algorithms for Scientific
+            Computing in Python}},
+  journal = {Nature Methods},
+  year    = {2020},
+  volume  = {17},
+  pages   = {261--272},
+  adsurl  = {https://rdcu.be/b08Wh},
+  doi     = {10.1038/s41592-019-0686-2},
+}
+
+@article{eager2021,
+  title={EAGER: embedding-assisted entity resolution for knowledge graphs},
+  author={Obraczka, Daniel and Schuchart, Jonathan and Rahm, Erhard},
+  journal={arXiv preprint arXiv:2101.06126},
+  year={2021}
+}
+
+@article{harris2020numpy,
+ title         = {Array programming with {NumPy}},
+ author        = {Charles R. Harris and K. Jarrod Millman and St{\'{e}}fan J.
+                 van der Walt and Ralf Gommers and Pauli Virtanen and David
+                 Cournapeau and Eric Wieser and Julian Taylor and Sebastian
+                 Berg and Nathaniel J. Smith and Robert Kern and Matti Picus
+                 and Stephan Hoyer and Marten H. van Kerkwijk and Matthew
+                 Brett and Allan Haldane and Jaime Fern{\'{a}}ndez del
+                 R{\'{i}}o and Mark Wiebe and Pearu Peterson and Pierre
+                 G{\'{e}}rard-Marchant and Kevin Sheppard and Tyler Reddy and
+                 Warren Weckesser and Hameer Abbasi and Christoph Gohlke and
+                 Travis E. Oliphant},
+ year          = {2020},
+ month         = sep,
+ journal       = {Nature},
+ volume        = {585},
+ number        = {7825},
+ pages         = {357--362},
+ doi           = {10.1038/s41586-020-2649-2},
+ publisher     = {Springer Science and Business Media {LLC}},
+ url           = {https://doi.org/10.1038/s41586-020-2649-2}
 }
