--- a/articles/er-metrics-library/main.tex
+++ b/articles/er-metrics-library/main.tex
@@ -456,11 +456,15 @@
 
     \section{Conclusions}\label{sec:conclusions}
 
-    In conclusion, this paper presents a library specifically designed for
-    assessing the quality of entity resolution.
-    Its distinguishing features include seamless integration capabilities and a
-    user-friendly application programming interface, deeply rooted in the
-    mathematical models fundamental to entity resolution.
+    We have introduced a library for evaluating entity resolution results that
+    is based on standards and Python protocols making it highly interoperable.
+    The application programming interface exposed by this library is deeply
+    rooted in the mathematical models fundamental to entity resolution.
+    Working with pairs or groups of entity references instead of having to label
+    data should provide a much more user-friendly experience.
+    The performance of the library is sound and the accuracy of the implemented
+    metrics is verified automatically.
+
     These attributes render the library not only highly beneficial but also low
     maintenance, making it an invaluable asset for all those passionate about
     entity resolution.
