--- a/articles/er-metrics-library/main.tex
+++ b/articles/er-metrics-library/main.tex
@@ -76,47 +76,52 @@
     This seems to be the consensus drawn in the scientific literature as we
     shall see in the next section.
 
-    The library we are introducing features implementations of various
-    information retrieval metrics adapted for entity resolution.
+    The library we are introducing implements various information retrieval
+    metrics adapted for entity resolution.
     It's also important to acknowledge the distinct mathematical models
     underlying entity resolution compared to information retrieval.
     The library sets itself apart by organizing metrics based on their
-    compatibility with entity resolution models, influenced partly by the
-    underlying differences in data structures that are characteristic to each
-    model and partly by personal bias.
+    compatibility with entity resolution models, influenced by the underlying
+    differences in data structures that are characteristic to each model.
+    Special attention is given to interoperability and the seamless integration
+    of the library into the Python programming language ecosystem.
 
     \section{Related Work}\label{sec:related}
 
     Measuring entity resolution quality was a subject of interest ever since the
     first paper on the subject surfaced\cite{newcombe1959}.
-    The paper speaks about accuracy and contamination similarly to how we
-    describe true and false positives today.
+    The paper speaks about accuracy and contamination similarly to the current
+    notions of true and false positives.
     The fundamental theory of record linkage\cite{fs1969} offers a probabilistic
     approach to evaluating the success of an entity resolution task.
-    It suggests methods to affect the results by selecting suitable thresholds
-    for defining success and failure and weights for independent probability
-    variables.
-    The literature expands on these techniques in subsequent papers\cite{winkler1990}.
-    Some of the useful entity resolution evaluation metrics include match
-    accuracy, match rate\cite{jaro1989advances}, error rate estimation, rate
-    of clerical disambiguation\cite{winkler1990} or relative distinguishing
+    It suggests methods to affect the results through the selection of suitable
+    thresholds for defining success and failure.
+    It also provides mechanisms for properly weighting for independent
+    probability variables.
+    The literature expands on these techniques in subsequent
+    papers\cite{winkler1990}.
+    Some of the entity resolution evaluation metrics that are a direct result of
+    this theoretical foundation include match accuracy, match
+    rate\cite{jaro1989advances}, error rate estimation, rate of clerical
+    disambiguation\cite{winkler1990} or relative distinguishing
     power of matching variables\cite{winkler2014}.
     A good amount of effort is spent on estimating and measuring the
-    effectiveness of blocking techniques to reduce the input size of the
-    evaluation data set\cite{winkler1990,jaro1989advances}.
+    effectiveness of blocking techniques to reduce the input size of the data
+    set used for evaluation purposes\cite{winkler1990,jaro1989advances}.
     Measuring entity resolution performance was and remains a computationally
     intensive task.
     
-    The concerns with using accuracy and match rate are voiced relatively
-    recently\cite{Goga2015}.
-    In recent years we see a shift towards metrics used in the related field of
-    information retrieval.
+    Concerns about using accuracy and match rate are also voiced\cite{Goga2015}.
+    Thus we see a shift towards metrics used in the related field of information
+    retrieval.
     The probabilistic model for entity resolution aligns well with concepts such
     as true/false positives/negatives.
     Given the extensive history of using ground truths to assess entity
-    resolution quality, most literature on this topic focuses on using
-    statistical metrics similar to those in information retrieval
-    evaluation\cite{manning2008}.
+    resolution quality, there is a natural fit for using information retrieval
+    quality metrics.
+    Most literature on this topic focuses on using information retrieval metrics
+    where the order in which results are retrieved is not
+    relevant\cite{manning2008}.
 
     Besides the original statistical model for entity resolution, other models
     have evolved from it or alongside it.
@@ -124,30 +129,26 @@
     Framework\cite{Ben2009Swoosh} and that of the Center for Entity Resolution
     and Information Quality at the University of Arkansas in Little
     Rock\cite{tal2007algebraic} stand out.
-    These models of entity resolution also proposed metrics for evaluating the
-    quality of the entity resolution process\cite{Men10,Tal11}.
+    These models of entity resolution also propose new metrics for evaluating
+    entity resolution quality\cite{Men10,Tal11}.
 
     Also related to this paper, there is ample coverage of the metrics used for
-    entity resolution in syntheses on the subject\cite{vldb2010,hitesh2012}.
-    More and more of the papers on the subject list metrics that measure aspects
-    of clustering than statistical metrics.
-    For example, variation of information\cite{Men10} or the Rand
-    index\cite{tal2007algebraic} come up regularly when attempting to measure
-    the performance of entity resolution tasks.
+    entity resolution in syntheses on the subject\cite{vldb2010,hitesh2012,Tal11}.
+    Metrics that measure aspects of clustering seem to be used more frequently
+    to measure entity resolution quality as time passes.
+    For example, pairwise and cluster metrics\cite{Men10, huang2006efficient} or
+    the Rand index\cite{tal2007algebraic} come up regularly in this context.
 
     Lastly, there are numerous systems that perform entity resolution available.
-    Some of these systems include modules that can evaluate the performance of
-    a particular entity resolution
-    solution\cite{fever2009,magellan2020,oyster2012}.
-    There are other libraries that some or all of the metrics that our library
-    implements\cite{nmeth2020scipy,ereval}.
+    Some of these systems include modules to evaluate the performance of a
+    particular entity resolution solution\cite{fever2009,magellan2020,oyster2012}.
+    There are also other Python packages that implement some or all of the
+    metrics provided by our library\cite{nmeth2020scipy,ereval}.
 
     \section{Discussion}\label{sec:discussion}
 
-    From a broader perspective, the necessity for a specialized library
-    dedicated to evaluating entity resolution metrics might seem redundant.
-    Additionally, the focus on Python as the programming platform further
-    questions the need for such a library.
+    In this context, the necessity for yet another specialized library dedicated
+    to evaluating entity resolution metrics might seem redundant.
     This skepticism is rooted in the expectation that Python, being a highly
     popular programming platform, should already offer high-quality, reusable
     tools available for a wide range of applications --- including evaluating
@@ -156,27 +157,26 @@
     Upon closer examination of the tools available for evaluating entity
     resolution tasks, certain limitations in the existing assumptions become
     apparent.
-    While there are numerous libraries offering packages for computing entity
-    resolution metrics, using a general-purpose library like SciPy raises
-    concerns about elegance and efficiency.
+    There are indeed numerous libraries offering packages for computing entity
+    resolution metrics.
+    However, using a general-purpose library like SciPy raises concerns about
+    interoperability and efficiency.
     This is particularly relevant when the sole requirement is to compute entity
     resolution metrics, and the additional features of a comprehensive library
     are unnecessary.
-    The challenge of seamlessly integrating an entity resolution evaluation
-    library becomes even more pronounced when attempting to use the ones
-    packaged with established entity resolution
-    systems\cite{oyster2012,jedai2017,deepm2020,magellan2020} or when attempting
-    to evaluate all of those systems.
+    The challenge of seamlessly integrating entity resolution evaluation
+    routines into a custom built project becomes even more pronounced when
+    attempting to use the ones packaged with established entity resolution
+    systems\cite{oyster2012,jedai2017,deepm2020,magellan2020}.
     
-    Conversely, when specifically searching for libraries that offer entity
+    Conversely, when specifically searching for libraries that only offer entity
     resolution metrics, it becomes evident that some crucial metrics essential
-    for effectively evaluating entity resolution tasks may be
-    absent\cite{ereval}.
+    for effectively evaluating entity resolution tasks may be absent\cite{ereval}.
 
     Approaching the issue from a different angle, using metrics from a
     general-purpose algorithmic library like Scipy (specifically
     \texttt{scipy.metrics}) for entity resolution evaluation requires strict
-    adherence to certain protocols.
+    adherence to certain design choices imposed by the library.
     For example, to calculate the Rand index, data clusters must be mapped with
     labels, and these labels must be provided as input.
     While this might seem simple, the user-friendliness of such an approach is
@@ -184,6 +184,9 @@
     The complexity of adapting existing data and managing the necessary labels
     for the package could potentially rival the complexity of computing the Rand
     index itself, mooting the use of the package.
+    Furthermore, additional memory and compute time are also required to perform
+    the mapping between own data structures and the ones required by the API
+    contract.
 
     In short, here are the reasons we chose to implement such a library:
     \begin{itemize}
@@ -195,7 +198,8 @@
     \item Historically, entity resolution has adapted evaluation techniques from
     statistics, information retrieval, and graph theory, tailoring these methods
     to suit its specific needs.
-    It seems desirable to standardize the way in which we use them.
+    It seems desirable to standardize these methods into forms specific to
+    entity resolution.
     \item Currently, there appears to be no implementation that consolidates all
     the metrics useful for entity resolution evaluation, as identified in
     scientific literature, into a single, cohesive unit.
@@ -203,10 +207,8 @@
     outcomes.
     \end{itemize}
 
-    The author has begun developing a new library dedicated to evaluating entity
-    resolution tasks to aid them in their own work.
-    They propose that using mathematical models specific to entity resolution is
-    the best approach for guiding the library's design.
+    Our opinion is that using mathematical models specific to entity resolution
+    is the best approach for guiding the library's design.
     Since each model significantly impacts the data structures used in
     evaluation, the library's functions are categorized based on the type of
     input they support and, implicitly, by the mathematical model they align
@@ -214,12 +216,12 @@
 
     There are a couple of important assumptions that the library makes,
     regardless of the entity resolution model.
-    One such assumption is that there exists a ground truth\cite{manning2008} to
-    compare the entity resolution outcome against.
+    One such assumption is that the quality of the entity resolution output is
+    always measured against a ground truth\cite{manning2008}.
     The other assumption is that the ground truth and the entity resolution
-    result are both expressed using the same model.
+    result are both structured under the same mathematical model.
 
-    \section{Mathematical Models}\label{sec:models}
+    \section{Entity Resolution Models}\label{sec:models}
     \subsection{Fellegi-Sunter Model}
     In the late 1960s Ivan Fellegi and Alan Sunter wrote the seminal
     paper\cite{fs1969} for what they called record linkage and what would later
@@ -241,10 +243,12 @@
     to just returning a list of pairs labeled as `links'.
 
     This intuitive explanation gives us the structure of the input we can expect
-    when we use the Fellegi-Sunter entity resolution model: a list of pairs.
-    So, the metrics that are implemented with this statistical model of entity
-    resolution in mind will only accept lists of pairs as the ground truth and
-    entity resolution result.
+    when we use the Fellegi-Sunter entity resolution model: an iterable sequence
+    of pairs.
+
+    The metrics that are implemented with the Fellegi-Sunter model of entity
+    resolution in mind will accept iterable sequences of pairs as input where
+    the ground truth and the result of the entity resolution task are concerned.
 
     \subsection{Algebraic Model}
     The algebraic model for entity resolution, initially conceived for assessing
@@ -274,12 +278,14 @@
     literature\cite{manning2008,hitesh2012}, are the most common method for
     measuring entity resolution performance as evidentiated by their almost
     ubiquitous usage\cite{fever2009,Goga2015,deepm2020,eager2021}.
-    The Fellegi-Sunter model provides clear definitions of Type I and Type II
-    errors\cite{winkler1990}, which in turn clarify the concepts of true
-    positives, true negatives, false positives, and false negatives.
+    These metrics are linked to the Fellegi-Sunter model for entity resolution
+    which provides clear definitions of Type I and Type II
+    errors\cite{winkler1990}.
+    Type I and Type II errors clarify the concepts of true positives, true
+    negatives, false positives, and false negatives as they are used in entity
+    resolution.
     Understanding these concepts necessitates referencing the $M$ (matches) and
-    $U$ (non-matches) sets as defined in the seminal paper on the statistical
-    model.
+    $U$ (non-matches) sets as defined in the seminal paper on the model.
 
     Depending on the expected location of a pair produced by the entity
     resolution function, we define:
@@ -301,8 +307,8 @@
     supported by our library:
 
     \begin{align}
-    Precision&=\frac{true positives}{true positives + false positives} \\
-    Recall&=\frac{true positives}{true positives + false negatives} \\
+    Precision&=\frac{true\,positives}{true\,positives + false\,positives} \\
+    Recall&=\frac{true\,positives}{true\,positives + false\,negatives} \\
     F_1 Score&=2 \cdot \frac{Precision \cdot Recall}{Precision+Recall}
     \end{align}
 
@@ -319,18 +325,24 @@
 
     \subsection{Algebraic Metrics}
     While commonly known as `cluster metrics'\cite{rand1971,hitesh2012} or
-    `pairwise metrics'\cite{hitesh2012,Men10}, we find that they are much better
-    described as `algebraic' because the principle of operation rests on an
-    algebraic foundation for all of these metrics.
-    In fact, most of the ones that are implemented by the library are an
-    exercise in using operations on sets, while the rest focus on matrix
-    operations with a dash of combinatorics:
+    `pairwise metrics'\cite{hitesh2012,Men10}, we find that both these types of
+    metrics are much better described as `algebraic' because the principle of
+    operation rests on an algebraic foundation for all of these metrics.
+    Most of the metrics that are implemented by the library are an exercise in
+    using operations on sets, while the rest focus on matrix operations with a
+    dash of combinatorics:
     \begin{itemize}
         \item Pairwise metrics (precision, recall and F-measure)\cite{Men10,hitesh2012}
         \item Cluster metrics (precision, recall and F-measure)\cite{huang2006efficient,hitesh2012}
         \item Talburt-Wang Index\cite{tal2007algebraic}
         \item Rand\cite{rand1971} and Adjusted Rand Index\cite{adjrand1985}
     \end{itemize}
+
+    The other reason we categorize these metrics as algebraic is because of
+    their close relationship with the algebraic model for entity resolution.
+    All of these metrics expect input arguments that are partitions over a set.
+    Moreover, the ground truth and the entity resolution result must be
+    partitions over the \textit{same} set.
     
     The Rand index is one of the first metrics used to compare the similarity
     between two different data clusterings.
@@ -377,18 +389,22 @@
 
     This metric approximates the Rand Index without requiring the expensive
     counting of true positives, false positives, true negatives or false
-    negatives.
+    negatives\cite{tal2007algebraic}.
+    It is valued within the same interval as the Rand Index.
     
     Besides the Rand Index, other popular metrics that can be used for comparing
     partitions are the pairwise precision, pairwise recall and their harmonic
-    mean (commonly referred to as the pairwise F measure).
+    mean (commonly referred to as the pairwise F measure)\cite{hitesh2012}.
+    
     If we have two sets $X$ and $Y$, the pairwise precision is given by the
-    fraction of pairs that are in both sets over the total amount of pairs of
-    the reference set\cite{hitesh2012}.
+    ratio of pairs that are in both sets to the total amount of pairs of the
+    reference set.
+
     \[ Pair Precision(X, Y) = \frac{|{Pairs(X)}\cap{Pairs(Y)}|}{|Pairs(X)|} \]
     
-    The pairwise recall is given by the fraction of pairs that are in both sets
-    over the number of pairs in the challenger set\cite{hitesh2012}.
+    The pairwise recall is given by the ratio of pairs that are in both sets
+    to the number of pairs in the comparison set\cite{hitesh2012}.
+
     \[ Pair Recall(X, Y) = \frac{|{Pairs(X)}\cap{Pairs(Y)}|}{|Pairs(Y)|} \]
 
     The pairwise F-measure is given by the harmonic mean of the pairwise
@@ -397,13 +413,18 @@
     \[ Pair F = \frac{2 \cdot Pair Precision \cdot Pair Recall}{Pair Precision + Pair Recall} \]
 
     The library computes these metrics on partitions by iterating through the
-    subsets of each partition and extracting pairs of elements from each subset.
+    equivalence classes of each partition generated by the entity resolution
+    equivalence relation and extracting pairs of elements from each subset.
     
-    Finally, the library supports computing a few `cluster measures'\cite{hitesh2012}.
-    cluster precision is the ratio of the number of completely correct
-    clusters to the total number of clusters retrieved, whereas cluster recall
-    is the portion of true clusters retrieved\cite{huang2006efficient}.
-    Their harmonic mean is typically called the cluster F-measure.
+    Finally, the library supports computing `cluster measures'\cite{hitesh2012}.
+    Cluster precision is the ratio of the number of completely correct
+    clusters to the total number of clusters resolved, whereas cluster recall
+    is the portion of true clusters resolved\cite{huang2006efficient}.
+    The harmonic mean of the cluster precision and cluster recall is typically
+    called the cluster F-measure.
+    In this paragraph `clusters' refer to the equivalence classes of the entity
+    resolution relation as it is formalized in the algebraic model.
+    
     Given two partitions $X$ and $Y$, the cluster measures are given by the
     following formulae:
 
@@ -424,9 +445,9 @@
     integrate new components, libraries and applications within the Python
     ecosystem.
     While other libraries\cite{nmeth2020scipy} promote their own API by
-    requiring users to use labels or adapt their own data to the strictures of
-    the API, our library takes full advantage of Python protocols by leveraging
-    protocols, such as the \texttt{Iterable} and \texttt{Hashable}.
+    requiring users to adapt their data to the strictures of the library design,
+    our library takes full advantage of the Python ecosystem by leveraging
+    protocols, such as \texttt{Iterable} and \texttt{Hashable}.
 
     All our library functions expect \texttt{Iterable} sequences as their input.
     In fact, the ground truth and entity resolution result can be any
@@ -436,44 +457,54 @@
     input arguments, where the inner tuple must contain only two items.
     For the algebraic model, the library represents partitions as
     \texttt{Iterable[set]} instances.
-    Since sets operate on \texttt{Hashable} items, virtually any instance that
-    implements the \texttt{Hashable} protocol can be passed as input to the
-    library.
+    Since sets operate on \texttt{Hashable} items, any instance that implements
+    the \texttt{Hashable} protocol is compatible with the library.
     
-    Adhering to the \texttt{Hashable} protocol has a few less obvious advantages
-    over using labels to compute metrics:
+    Adhering to the \texttt{Hashable} protocol has some less obvious advantages
+    over imposing design choices onto the user to compute metrics:
     \begin{itemize}
         \item it works out of the box with basic types such as numbers or
-        strings, but also with tuples or lists;
+        strings, but also with any \texttt{Hashable} types such as tuples or
+        lists;
         \item if custom objects are used to represent the data that describes
         entities, the objects can be reused when computing metrics thus saving
         the memory that would otherwise be allocated for labeling the data;
         \item the only adaptation required to use this library is implementing
         the well-known \texttt{Hashable} protocol, leading to a much lower
-        implementation effort\@
+        implementation effort in the case when the data is not already
+        compatible with the library\@
     \end{itemize}
 
-    The technology choice deserves special attention because of a limitation it
-    imposes on the design, too.
+    Choosing Python deserves special attention also because of a limitation it
+    imposes on the design.
     Normally, a partition $P$ over a set $X$ is defined as a set of
     non-overlapping subsets containing all the elements from $X$, that is:
+
     \[
         P(X) = \{ C_1, C_2, \ldots, C_n | \bigcap\limits^n_{i=1}C_i=\emptyset \land \bigcup\limits^n_{i=1}C_i=X \}
     \]
 
     The library implements metrics that compare partitions, but it requires the
-    partition to be specified as an \texttt{Iterable[set]}, instead of a set of
+    partition to be specified as an \texttt{Iterable[set]} instead of a set of
     sets.
+
     The reason behind this choice is purely technological and lies with the
     choice of the Python core team to not make \texttt{set} instances
     \texttt{Hashable}.
-    This entails an obligation to verify that, when partitions over a set are
-    expected as the input arguments of a library function, that function will
-    verify that the input arguments are partitions over the same set.
+    This entails an obligation on the part of the library to verify that, when
+    partitions over a set are expected as the input arguments of a library
+    function, that function will verify that the input arguments are partitions
+    over the same set.
 
     Using the \texttt{frozenset} data type (which is \texttt{Hashable}) instead
     of the \texttt{Iterable} protocol would decrease the interoperability of the
-    library without substantial gain.
+    library.
+    The gains of choosing the \texttt{frozenset} in terms of performance and
+    maintainability of the library would be marginal because checking that two
+    iterable sequences of sets are partitions over the same set is a trivial and
+    efficient algorithm that needs to be implemented only once.
+    For the time being, we favor interoperability over performance and easy
+    maintenance.
 
     \section{Future Work}\label{sec:future}
 
