--- a/articles/er-metrics-library/main.tex
+++ b/articles/er-metrics-library/main.tex
@@ -21,6 +21,8 @@
     \theoremstyle{definition}
     \newtheorem{defn}{Definition}[section]
     
+    \textcolor{green}{e nevoie de titlu!}
+    
     \abstract\label{abstract}
 
     Entity resolution, the process of discerning whether two datasets refer to
