--- a/articles/er-metrics-library/er-software.bib
+++ b/articles/er-metrics-library/er-software.bib
@@ -34,3 +34,11 @@
   howpublished="\url{https://peps.python.org/pep-0544/}",
   note={Online; Accessed: 26.11.2023},
 }
+
+@software{matchescu-er-metrics2023,
+ title={Entity Resolution Metrics Library},
+ author={Andrei Olar},
+ year={2023},
+ howpublished="\url{https://github.com/matchescu/er-metrics}",
+ note={Online; Accessed: 26.11.2023},
+}
